# AXONIX

./: .gitignore  IMPLEMENTED_FEATURES.md  README.md  SESSION_SUMMARY.md  axonix.spec  axonix_main.py  build.bat  build.py  devnet.spec  install.bat  pyproject.toml  requirements.txt  setup.py  test_agent.py  test_parser.py
.axonix/history/: chat_20260228_054738.jsonl  chat_20260228_055543.jsonl  chat_20260228_055921.jsonl
axonix/: __init__.py
axonix/agents/: specialized.py
axonix/core/: agent.py  backend.py  cli.py  config.py  debug.py  downloader.py  first_run.py  history.py  loop.py  memory.py  models.py  runner.py  stream_parser.py
axonix/tools/: __init__.py  code_tools.py  file_tools.py  shell_tools.py  web_tools.py
axonix/web/: server.py
axonix/web/static/: index.html
devnet/: __init__.py
devnet/agents/: __init__.py  specialized.py
devnet/core/: agent.py  backend.py  cli.py  config.py  downloader.py  first_run.py  history.py  llama_backend.py  loop.py  memory.py  models.py  runner.py
devnet/tools/: code_tools.py  file_tools.py  shell_tools.py  web_tools.py
devnet/web/: __init__.py  server.py
devnet/web/static/: index.html
