[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axonix"
version = "1.0.0"
description = "Axonix — Fully Local Super Agentic AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama",
    "llama-cpp-python",
]

[project.optional-dependencies]
dev = ["flake8", "black", "pytest", "pyinstaller"]

[project.scripts]
axonix = "axonix.core.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["axonix*"]
